--- a/cocktail_css/Cocktail.css
+++ b/cocktail_css/Cocktail.css
@@ -400,14 +400,9 @@ textarea{margin-left: 10px;}
 
 }
 @media only screen and (max-width:800px){
-#about{
-  /* content: "About"; */
-  color: aqua;
-  background-color: burlywood;
-  text-decoration: dotted;
-}
-#nav_menu{
-  font-weight: 2;
+
+#myMenu{
+  font-size: .5em;
 }
 }
 @media only screen and (max-width:990px) {
