--- a/cocktail_css/Cocktail.css
+++ b/cocktail_css/Cocktail.css
@@ -394,7 +394,7 @@ textarea{margin-left: 10px;}
 #myMenu{
   font-size: .5em;
 }
-
+}
 @media only screen and (max-width:990px) {
 .net{
     width: 90%;
@@ -470,5 +470,4 @@ background-color: #eee;
 color: white;
 text-align: center;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
-
 }
