--- a/cocktail_css/Cocktail.css
+++ b/cocktail_css/Cocktail.css
@@ -393,7 +393,13 @@ textarea{margin-left: 10px;}
 
 #myMenu{
   font-size: .5em;
+
 }
+
+#nav_menu ul ul li a{
+  font-size: .5em;
+  font-weight: normal;
+  } 
 }
 @media only screen and (max-width:990px) {
 .net{
