--- a/cocktail_css/Cocktail.css
+++ b/cocktail_css/Cocktail.css
@@ -1,3 +1,100 @@
+#nav_menu ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  }
+  #nav_menu ul li{
+  float: left;
+  width: 20%;
+  }
+  #nav_menu ul ul{
+  display: none;
+  position: absolute;
+  top: 100%;
+  width: 20%;
+  }
+  #nav_menu ul ul li{
+  float: none;
+  width: 100%;
+  position: relative;
+  }
+  
+  #nav_menu ul ul li ul {
+  position: absolute;
+  left: 100%;            /* Position the second submenu at the right side of the li element */ 
+  top: 0;                /* Position the second submenu at the top of the li element */
+  width: 100%;
+  }
+  
+  #nav_menu ul li a{
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding: 1em 0;
+  text-decoration: none;
+  background-color: indigo;
+  color: white;
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  #nav_menu{
+  position: relative;
+  }
+  #nav_menu ul li:hover > ul{
+  display: block;
+  }
+  #nav_menu > ul::after{
+  content: "";
+  float: none;
+  display: block;
+  clear: both;
+  }
+  #nav_menu ul li a:hover, #nav_menu ul li a:focus {
+  background-color: gray;
+  }
+  /* Style the navigation menu inside the left column */
+  #myMenu {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+    height: 309px;
+    overflow: hidden;
+    }
+    
+    #myMenu li a {
+    padding: 12px;
+    text-decoration: none;
+    color: black;
+    display: block;
+    }
+    #myMenu li a:hover {
+    background-color: #eee;
+    }
+    #mySearch::placeholder{
+    color: white;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+  #mySearch{height: 51.5px;}
+    
+  /* Style the search box */
+  #mySearch {
+    width: 100%;
+    font-size: 18px;
+    padding:0, 11px;
+    border-radius: 0;
+    border: none;
+    vertical-align: top;
+    text-align: left;
+    margin: 0;
+    outline: none;
+    height: 51.5px;
+    background-color: indigo;
+    color: white;
+    } 
+  
 h1{
   text-align: center;
   font-size: 350%;
@@ -11,8 +108,6 @@ font-size: large;
 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial,sans-serif;
 padding: 30px;
 }
-
-
 html{scroll-behavior: smooth;}
 body{
 background-color: lightgray;
@@ -26,7 +121,6 @@ box-sizing: border-box;
 }
 
 img:hover{
-
 transition: .9s;
 filter: grayscale(100%);
 }
@@ -38,16 +132,12 @@ width: auto;
 color: mintcream;
 font-family: Arial, Helvetica, sans-serif;
 font-size: 200%; 
-
 }
 video{
-
 display: block;
 margin-left: auto;
 margin-right: auto;
-
 }
-
 a{text-decoration: none;}
 
 .net{
@@ -64,6 +154,7 @@ background-color: darkgray;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: rgb(194, 199, 199);
   margin: 20px 0;
+  
   }
   .red img{
   width: 45%;
@@ -83,20 +174,16 @@ text-align: center;
 font-weight: bold;
 }
 .row2{
-display: flex;
+
 padding:10px 40px;
 font-family: Arial, Helvetica, sans-serif;
 color: black;
-
+font-size: 150%;
 }
-
 .row3{
 display: flex;
 }
-#short {
-width: 100%;
-font-size: 150%;
-}
+
 .col3{
 width: 390px ;
 background-color: grey;
@@ -123,102 +210,6 @@ width: 100%;
 height: 100%;
 object-fit:cover;
 }
-#nav_menu ul{
-list-style: none;
-margin: 0;
-padding: 0;
-position: relative;
-}
-#nav_menu ul li{
-float: left;
-width: 20%;
-}
-#nav_menu ul ul{
-display: none;
-position: absolute;
-top: 100%;
-width: 20%;
-}
-#nav_menu ul ul li{
-float: none;
-width: 100%;
-position: relative;
-}
-
-#nav_menu ul ul li ul {
-position: absolute;
-left: 100%;            /* Position the second submenu at the right side of the li element */ 
-top: 0;                /* Position the second submenu at the top of the li element */
-width: 100%;
-}
-
-#nav_menu ul li a{
-display: block;
-width: 100%;
-text-align: center;
-padding: 1em 0;
-text-decoration: none;
-background-color: indigo;
-color: white;
-font-weight: bold;
-font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-#nav_menu{
-position: relative;
-}
-#nav_menu ul li:hover > ul{
-display: block;
-}
-#nav_menu > ul::after{
-content: "";
-float: none;
-display: block;
-clear: both;
-}
-#nav_menu ul li a:hover, #nav_menu ul li a:focus {
-background-color: gray;
-}
-/* Style the navigation menu inside the left column */
-#myMenu {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: none;
-  height: 309px;
-  overflow: hidden;
-  }
-  
-  #myMenu li a {
-  padding: 12px;
-  text-decoration: none;
-  color: black;
-  display: block;
-  }
-  #myMenu li a:hover {
-  background-color: #eee;
-  }
-  #mySearch::placeholder{
-  color: white;
-  text-align: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-#mySearch{height: 51.5px;}
-  
-/* Style the search box */
-#mySearch {
-  width: 100%;
-  font-size: 18px;
-  padding:0, 11px;
-  border-radius: 0;
-  border: none;
-  vertical-align: top;
-  text-align: left;
-  margin: 0;
-  outline: none;
-  height: 51.5px;
-  background-color: indigo;
-  color: white;
-  } 
 
 .blue img{
 width: 100%;
@@ -245,7 +236,7 @@ color: black;
 .blurb {
 font-size: 20px;
 }
-.red ul,.red ol{padding-left: 40px;}
+ul, ol{padding-left: 40px;}
 
 figcaption{
 display: block;
