--- a/cocktail_css/Cocktail.css
+++ b/cocktail_css/Cocktail.css
@@ -154,7 +154,20 @@ background-color: darkgray;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: rgb(194, 199, 199);
   margin: 20px 0;
-  
+ 
+  }
+
+  p img{
+    width: 45%;
+    border: 2px solid indigo;
+    float: right;
+    margin-left: 10px;
+  }
+  .box{
+    padding: 40px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: rgb(194, 199, 199);
+  margin: 20px 0;
   }
   .red img{
   width: 45%;
@@ -210,75 +223,22 @@ width: 100%;
 height: 100%;
 object-fit:cover;
 }
-
+.blue{
+  background-color: greenyellow;
+  
+}
 .blue img{
+
 width: 100%;
-height: 100%;
 border: 2px solid indigo;
 }
 
-button{
-
-float: right;
-display: block;
-background-color: rgba(255, 0, 0, 0.575);
-color: white;
-padding: 5px 10px;
-border: 2px solid black;
-font-size: 80%;
-font-family: 'bebas', Times, serif;
-border-radius: 8px;
-}
-button:hover{
-background-color: rgba(228, 194, 5, 0.726);
-color: black;
-}
 .blurb {
 font-size: 20px;
 }
 ul, ol{padding-left: 40px;}
 
-figcaption{
-display: block;
-margin: .5em 0 1em 1em;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-font-size: 30px;
-font-weight: bold;
-padding-top: .25em;
-margin-bottom: 1em;
-border-bottom:  1px solid black;
-animation: ani 2s ease-in-out 3s  infinite alternate ;
-}
-@keyframes ani{
-from{padding-left:0px;}
-to{padding-left:500px;}
-}
 
-dd{line-height: 30px;}
-legend {
-color: black;
-font-weight: bold;
-font-size: 100%;
-margin-bottom: .5em;
-}
-fieldset {
-margin-bottom: .5em;
-padding: 10px 1em;
-margin: 20px 0;
-}
-form{
-font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-label{
-width: 15em;
-float: left;
-text-align: right;
-margin-left: 10px;
-}
-input
-{
-margin-left: 10px;
-}
 textarea{margin-left: 10px;}
 @media only screen and (max-width:1270px) {
 .net{
