--- a/cocktail_css/Cocktail.css
+++ b/cocktail_css/Cocktail.css
@@ -192,6 +192,9 @@ padding: 0;
   width: 100%;
   height: 200px;
   margin: auto;
+  background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
 }
 .pico img{
 width: 100%;
