--- a/cocktail_css/Cocktail.css
+++ b/cocktail_css/Cocktail.css
@@ -19,14 +19,12 @@
   width: 100%;
   position: relative;
   }
-  
   #nav_menu ul ul li ul {
   position: absolute;
   left: 100%;            /* Position the second submenu at the right side of the li element */ 
   top: 0;                /* Position the second submenu at the top of the li element */
   width: 100%;
   }
-  
   #nav_menu ul li a{
   display: block;
   width: 100%;
@@ -62,7 +60,6 @@
     height: 309px;
     overflow: hidden;
     }
-    
     #myMenu li a {
     padding: 12px;
     text-decoration: none;
@@ -78,7 +75,6 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
   #mySearch{height: 51.5px;}
-    
   /* Style the search box */
   #mySearch {
     width: 100%;
@@ -138,7 +134,7 @@ background-color: darkgray;
 .box{
 padding: 40px;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
-background-color: rgb(194, 199, 199);
+background-color: darkgray;
 margin: 20px 0;
 }
 .red{
@@ -201,33 +197,15 @@ width: 100%;
 height: 100%;
 object-fit:cover;
 }
-.blue{
-  background-color: greenyellow;
-  margin-bottom: 10px;
-}
 .blue img{
 width: 100%;
-
 border: 2px solid indigo;
+display: block;
 }
-
-.blurb {
-font-size: 20px;
-}
+.blurb {font-size: 20px;}
 ul, ol{padding-left: 40px;}
 
-@media only screen and (max-width:1270px) {
-.net{
-    width: 976px;
-}
-.col3{
-  width: 295px;
-}
-.pico img{
-  width: 100%;
-  height: 100%;
-}
-}
+
 @media only screen and (max-width:800px){
 #myMenu{font-size: .5em;}
 #nav_menu ul ul li a{
@@ -236,23 +214,15 @@ ul, ol{padding-left: 40px;}
   } 
 }
 @media only screen and (max-width:990px) {
-.net{
-    width: 90%;
-    
-}
+
 .col3{
-    width: 90%;
-    overflow: hidden;
+    width: 100%;
 }
 .row3{
-    flex-direction: column;
     width: 90%;
     margin: auto;
 }
-.pico img{
-  width: 100%;
-  height: 100%;
-} 
+
 h1{
   font-size: 200%;
 }
